src/test/lab3/valid/Simple.slac
class Fact {
    method computeFactorial(num : Int) : Int = {
        num
    }
}

method main() : Unit = {
    println("f" + "oo" == "fo" + "o");
    println(new Fact() == new Fact())
}
