src/test/lab3/invalid/XX-Fail24.slac
class A {
    method foo() : retType = {
        a = self.field;
        12
    }
}

method main() : Unit = { println("42") }
